$Id: History,v 1.28 2001-09-13 13:30:24 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
 13 sep 01: L.Urban (utils-V03-02-03)
- Unused TrueToGeomTransformation method deleted. Class description
- corr. in ComputeTransportCrossSection
    
 11 sep 01: L.Urban (utils-V03-02-02)
- G4MultipleScatteringx put as the default: G4MultipleScattering
     
 11 sep 01: L.Urban (utils-V03-02-01)
- last tag with G4MultipleScatteringx file. 
    
 03 sep 01: L.Urban (utils-V03-02-00)
- value of data member factlim has been changed.
     
 28 aug 01: mma
- G4MultipleScatteringx: small modifs in BuildPhysicsTable,
  ComputeTransportCrossSection, PostStepDoIt. 
  GetContinuousStepLimit and AlongStepDoIt moved to .cc file

 23 aug 01: L. Urban
- new angle and z(geom. pathlength) distributions,
  energy (step) dependence has been reduced,
  Store/Retrieve methods have been commented out temporarily
     
 8 aug 01: mma
- G4MultipleScatteringx: methods to store/retrieve PhysicsTable

18 may 01: V.Ivanchenko (utils-V03-01-01)
- clean up againist Linux ANSI strict compilation mode.
    
16 may 01: L.Urban (utils-V03-01-00)
- value of the member cpar has been changed back to the original