@@ -1,4 +1,4 @@
-$Id: History,v 1.28 2001-09-13 13:30:24 maire Exp $
+$Id: History,v 1.29 2001-09-17 17:18:59 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,7 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
-     
+17 sep 01: mma (utils-V03-02-04)
+- modifs in muls and VEnergyLoss for the migration of Materials to pure STL,
+  but backward compatible with g4rw 
+         
  13 sep 01: L.Urban (utils-V03-02-03)
 - Unused TrueToGeomTransformation method deleted. Class description
 - corr. in ComputeTransportCrossSection
